cookbooks/olympus/hestia/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "hestia"
  labels:
    app.kubernetes.io/instance: "hestia"
    app.kubernetes.io/name: "hestia"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hestia"
      app.kubernetes.io/instance: "hestia"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hestia"
        app.kubernetes.io/instance: "hestia"
    spec:
      containers:
        - name: "hestia"
          image: "registry.digitalocean.com/zeus-fyi/hestia:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-hestia"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9002
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            {}
      volumes:
        - name: cm-hestia
          configMap:
            name: cm-hestia
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
