cookbooks/olympus/hestia/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hestia"
  namespace: "hestia"
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.zeus.fyi"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: hestia-tls
      hosts:
        - hestia.zeus.fyi
  rules:
    - host: hestia.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hestia
                port:
                  number: 80
